# qwen-grpo

./: #experiment_log.md#  .gitignore  README.md  concepts.md  conductor_cell_specs.md  conductor_log.md  conductor_task_proposal.md  data.py  eval.py  experiment_log.md  filter_data.py  fuzz_oracle.py  pyproject.toml  rewards.py  stages.md  test_conductor_baselines.py  test_conductor_estimands.py  test_conductor_executor.py  test_conductor_grpo.py  test_conductor_payoff_support.py  test_conductor_pool_runtime.py  test_conductor_program.py  test_conductor_runtime.py  test_conductor_stage1.py  test_conductor_tools.py  test_conductor_types.py  test_conductor_worker_eval.py  test_conductor_workerpool.py  test_countdown.py  test_gsm8k.py  test_rewards.py  train.py
analysis/: a2_kl_split.py  e7_rivals.py  windows.py
data/: gsm8k_filtered.json
data/evals/: Qwen2.5-7B-Instruct-c1base-D1-k1-t0.0.json  Qwen2.5-7B-Instruct-c1base-D2-k1-t0.0.json  Qwen2.5-7B-Instruct-c1base-D3-k1-t0.0.json  Qwen2.5-7B-Instruct-c1base-D4-k1-t0.0.json  Qwen2.5-7B-Instruct-c1base-D5-k1-t0.0.json  Qwen2.5-7B-Instruct-k1-t0.0.json  Qwen2.5-7B-Instruct-k8-t1.0.json  a3-easy-control-k1-t0.0.json  a3-easy-control-k64-t1.0.json  a4-filtered-s1-k1-t0.0.json  c1-D1-s0-k1-t0.0.json  c1-D2-s0-k1-t0.0.json  c1-D3-s0-k1-t0.0.json  e1-repro-newstack-k1-t0.0.json  stage1-7b-g8-t1.0-k1-t0.0.json
plans/conductor/: 00_f_task_prep.md  01_s_task_proposal.md  02_f_plan.md  03_s_plan_critique.md  04_s_plan_data_proposal_alternative.md  05_f_plan_rev2.md  07_f_plan_rev3.md  (+114 more)
tasks/: __init__.py  countdown.py  gsm8k.py
(+66 files in other folders)
