[project]
name = "qwen-grpo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.2",
    "datasets>=5.0.0",
    "peft>=0.19.1",
    # floor relaxed so the resolver can honor vLLM's exact torch pin
    # (vllm 0.24.0 -> torch==2.11.0); vLLM releases lag one torch minor
    "scikit-learn>=1.9.0",
    "torch>=2.11",
    "trl>=1.7.1",
    "vllm>=0.24",
    "wandb>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
